Fixed content off screen

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -99,6 +99,7 @@
 @media all and (max-width: config.$MOBILE) {
   .container {
     padding: 2rem 1rem;
+    height: 100%;
   }
 
   .main-container {
